# c-

./: CMakeLists.txt  README.md  exports.def  pack.ps1
.github/workflows/: build.yml
bpo_driver/: INFO.XML  MANIFEST.XML  TableActions.xml  TableParameters.xml
include_1c/: AddInDefBase.h  bpo_methods.h  component_base.h  types.h
native_component/: CMakeLists.txt
native_component/include_1c/: bpo_methods.h  component_base.h  types.h
native_component/src/: driver.cpp  driver.h  exports.cpp
scripts/: pack.ps1
src/: AddInNative.cpp  Component.cpp  Component.h  WinHttpClient.cpp  WinHttpClient.h  driver.cpp  driver.h  exports.cpp
